# navikaf_rust_api

./: .gitignore  Cargo.toml  DART to RUST.md  README.md  build.rs  docker-compose.yml
src/: kafka_consumer.rs  main.rs  main3.rs  utils.rs
src/config/: admin_utils.rs  config_utils.rs  mod.rs
src/model/: kafka_client.proto  kafka_client.rs  mod.rs
