[package]
name = "navikaf_rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_builder = "0.20.0"
prost = "0.12.4"
rdkafka = { version = "0.36.2", features = ["cmake-build", "tokio", "futures-executor"] }
chrono = "0.4.37"
log = "0.4.21"
env_logger = "0.11.3"

[build-dependencies]
prost-build = "0.12.4"
derive_builder = "0.20.0"
